--- a/index.html
+++ b/index.html
@@ -5,11 +5,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap 5 CSS  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Mac Book Price | Asraful Islam</title>
 </head>
 
 <body>
-    <h1>Mac Book</h1>
+    <main class="container">
+        <section class="row my-5">
+            <!-- Img section  -->
+            <div class="col col-lg-5 p-5">
+                <h1><img class="w-100" src="images/mac.png" alt=""></h1>
+            </div>
+            <!-- Features Section -->
+            <div class="col col-lg-7 py-5">
+                <article>
+                    <h1>Customize your Blue 24‑inch iMac with Apple M1 chip.</h1>
+                    <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and
+                        16-core Neural Engine</p>
+                </article>
+                <!-- Memory Section  -->
+                <div class="mt-4">
+                    <h5>Memory</h5>
+                    <button id="memory-8gb" class="btn btn-outline-secondary">8GB unified Memory</button>
+                    <button id="memory-16gb" class="btn btn-outline-secondary">16GB unified Memory</button>
+                </div>
+                <!-- Storage section  -->
+                <div class="mt-4">
+                    <h5>Storage</h5>
+                    <button id="storage-256gb" class="btn btn-outline-secondary">256GB SSD storage</button>
+                    <button id="storage-512gb" class="btn btn-outline-secondary">512GB SSD storage</button>
+                    <button id="storage-1tb" class="btn btn-outline-secondary">1TB SSD storage</button>
+                </div>
+                <!-- Delivery Section  -->
+                <div class="mt-4">
+                    <h5>Choose your delivery option</h5>
+                    <button id="memory-8gb" class="btn btn-outline-secondary">Friday, Aug 25 FREE Prime
+                        Delivery</button>
+                    <button id="memory-16gb" class="btn btn-outline-secondary">Monday, Aug 21 Delivery Charge
+                        $20</button>
+                </div>
+                <!-- Price Section  -->
+                <div class="row">
+                    <div class="col col-md-6">
+                        <table class="table my-5 fw-bold w-100">
+                            <tr>
+                                <td>Best Price</td>
+                                <td>$<span id="best-price">1299</span></td>
+                            </tr>
+                            <tr>
+                                <td>Extra Memory Cost</td>
+                                <td>$<span id="extra-memory">0</span></td>
+                            </tr>
+                            <tr>
+                                <td>Extra Storage Cost</td>
+                                <td>$<span id="extra-storage">0</span></td>
+                            </tr>
+                            <tr>
+                                <td>Delivery Charge</td>
+                                <td>$<span id="delivery-charge">0</span></td>
+                            </tr>
+                            <tfoot>
+                                <tr>
+                                    <td>Total Price</td>
+                                    <td>$<span id="delivery-charge">1290</span></td>
+                                </tr>
+                            </tfoot>
+
+
+                        </table>
+
+                        <p>Add Promo Code</p>
+                        <input id="promo-code" class="control" type="text">
+                        <button id="promo-btn" class="btn btn-danger">Apply</button>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </section>
+        <footer>
+            <hr class="border-1">
+            <h1 class="text-center pb-4">Total $<span id="grand-total">1290</span></h1>
+        </footer>
+    </main>
+
+
+
+    <!-- Bootstrap Script  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
