--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <!-- Delivery Section  -->
                 <div class="mt-4">
                     <h5>Choose your delivery option</h5>
-                    <button id="memory-8gb" class="btn btn-outline-secondary">Friday, Aug 25 FREE Prime
+                    <button id="free-delivery" class="btn btn-outline-secondary">Friday, Aug 25 FREE Prime
                         Delivery</button>
-                    <button id="memory-16gb" class="btn btn-outline-secondary">Monday, Aug 21 Delivery Charge
+                    <button id="paid-delivery" class="btn btn-outline-secondary">Monday, Aug 21 Delivery Charge
                         $20</button>
                 </div>
                 <!-- Price Section  -->
@@ -70,7 +70,7 @@
                             <tfoot>
                                 <tr>
                                     <td>Total Price</td>
-                                    <td>$<span id="delivery-charge">1290</span></td>
+                                    <td>$<span id="total-price">1299</span></td>
                                 </tr>
                             </tfoot>
 
@@ -90,7 +90,7 @@
         </section>
         <footer>
             <hr class="border-1">
-            <h1 class="text-center pb-4">Total $<span id="grand-total">1290</span></h1>
+            <h1 class="text-center pb-4">Total $<span id="grand-total">1299</span></h1>
         </footer>
     </main>
 
@@ -100,6 +100,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <!-- custom Script  -->
+    <script src="js/script.js"></script>
 
 </body>
 
