promo code updated

--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
 
                         </table>
 
-                        <p>Add Promo Code</p>
+                        <p class="fw-bold">Add Promo Code</p>
                         <input id="promo-code" class="control" type="text">
                         <button id="promo-btn" class="btn btn-danger">Apply</button>
+                        <br>
+
+                        <p id="promo-notify" class="fst-italic fw-normal"></p>
                     </div>
 
 
