--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <main class="container">
         <section class="row my-5">
             <!-- Img section  -->
-            <div class="col col-lg-5 p-5">
+            <div class="col-md-5 p-5">
                 <h1><img class="w-100" src="images/mac.png" alt=""></h1>
             </div>
             <!-- Features Section -->
-            <div class="col col-lg-7 py-5">
+            <div class="col-md-7 py-5">
                 <article>
                     <h1>Customize your Blue 24‑inch iMac with Apple M1 chip.</h1>
                     <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and
