--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
                 <!-- Memory Section  -->
                 <div class="mt-4">
                     <h5>Memory</h5>
-                    <button id="memory-8gb" class="btn btn-outline-secondary">8GB unified Memory</button>
-                    <button id="memory-16gb" class="btn btn-outline-secondary">16GB unified Memory</button>
+                    <button id="memory-8gb" class="btn btn-outline-secondary my-1">8GB unified Memory</button>
+                    <button id="memory-16gb" class="btn btn-outline-secondary my-1">16GB unified Memory</button>
                 </div>
                 <!-- Storage section  -->
                 <div class="mt-4">
                     <h5>Storage</h5>
-                    <button id="storage-256gb" class="btn btn-outline-secondary">256GB SSD storage</button>
-                    <button id="storage-512gb" class="btn btn-outline-secondary">512GB SSD storage</button>
-                    <button id="storage-1tb" class="btn btn-outline-secondary">1TB SSD storage</button>
+                    <button id="storage-256gb" class="btn btn-outline-secondary my-1">256GB SSD storage</button>
+                    <button id="storage-512gb" class="btn btn-outline-secondary my-1">512GB SSD storage</button>
+                    <button id="storage-1tb" class="btn btn-outline-secondary my-1">1TB SSD storage</button>
                 </div>
                 <!-- Delivery Section  -->
                 <div class="mt-4">
                     <h5>Choose your delivery option</h5>
-                    <button id="free-delivery" class="btn btn-outline-secondary">Friday, Aug 25 FREE Prime
+                    <button id="free-delivery" class="btn btn-outline-secondary my-1">Friday, Aug 25 FREE Prime
                         Delivery</button>
-                    <button id="paid-delivery" class="btn btn-outline-secondary">Monday, Aug 21 Delivery Charge
+                    <button id="paid-delivery" class="btn btn-outline-secondary my-1">Monday, Aug 21 Delivery Charge
                         $20</button>
                 </div>
                 <!-- Price Section  -->
@@ -73,23 +73,16 @@
                                     <td>$<span id="total-price">1299</span></td>
                                 </tr>
                             </tfoot>
-
-
                         </table>
 
                         <p class="fw-bold">Add Promo Code</p>
-                        <input id="promo-code" class="control" type="text">
-                        <button id="promo-btn" class="btn btn-danger">Apply</button>
+                        <input id="promo-code" class="control my-1" type="text">
+                        <button id="promo-btn" class="btn btn-danger my-1">Apply</button>
                         <br>
-
                         <p id="promo-notify" class="fst-italic fw-normal"></p>
                     </div>
-
-
                 </div>
-
             </div>
-
         </section>
         <footer>
             <hr class="border-1">
